# pygtd

./: .gitignore  pyproject.toml
migrations/: env.py
migrations/versions/: 969dffc7a805_adding_todos.py
pygtd/: __main__.py  db.py
pygtd/commands/: __init__.py  todo.py
pygtd/models/: __init__.py  todo.py
tests/cli/: test_add_todo.py
