[tool.poetry]
name = "pygtd"
version = "0.1.0"
description = ""
authors = ["Brian Burrito Bommarito <brian@bommarito.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"

[tool.poetry.scripts]
pygtd = "pygtd.__main__:cli"
pygtd-tui = "pygtd.__main__:tui"

[tool.poetry.group.dev.dependencies]
ipython = "^8.17.2"
mypy = "^1.7.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
